--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- hero section -->
   <div class="bg-blueGradient min-h-screen flex flex-col justify-between ">
     <div class=" pt-[33px] md:pt-[51px]">
-      <div class=" container max-w-[1155px] px-6 mx-auto ">
+      <div class=" container max-w-[1155px] px-3 mx-auto ">
         <div class=" flex items-center justify-between">
           <img class="sm:w-[134px] w-[100] h-[42px] sm:h-[55px] cursor-pointer" src="./assets/images/navLogo.png"
             alt="Navlogo">
@@ -75,14 +75,14 @@
       </div>
     </div>
     <div class="flex grow justify-end items-end pb-[80px] md:pb-[120px] ">
-      <div class="container px-6 mx-auto max-w-[1155px]">
+      <div class="container px-3 mx-auto max-w-[1155px]">
         <div class="flex items-end gap-10">
           <h1
             class="ff-phudu text font-bold text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] leading-[37px] lg:leading-[73px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
             THE
           </h1>
           <div
-            class="w-[127px] md:w-[219px] block md:hidden h-[69px] md:h-[118px] rounded-[129px] bg-lightGreen text relative">
+            class="w-[127px] max-sm:translate-y-[13px] md:w-[219px] block md:hidden h-[69px] md:h-[118px] rounded-[129px] bg-lightGreen text relative">
             <img
               class="absolute bottom-[0%] left-[11%] text w-[96px] md:w-[155px] lg:w-[164px] h-[123px] md:h-[175px] lg:h-[210px]"
               src="./assets/images/hero-person.png" alt="headerImgGirl" />
@@ -136,7 +136,7 @@
           </div>
 
           <p
-            class="ff-phudu font-bold text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] text leading-[73px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
+            class="ff-phudu font-bold text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] text leading-[46px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
             CO-PILOT
           </p>
         </div>
@@ -147,7 +147,7 @@
         </p>
         <div class="md:hidden mt-[32px]">
           <a href="#morebtn"
-            class="p-[7px_19px_10px_30px] btn  justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkgreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
+            class="p-[7px_19px_10px_30px] btn justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkgreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
             <span class="pe-1"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
@@ -338,14 +338,14 @@
             All rights reserved.</p>
         </div>
         <div class=" flex items-center justify-center lg:justify-end  gap-[18px] order-2 lg:order-3">
-          <a class=" duration-300 hover:translate-y-[-30px]" href="https://in.linkedin.com/" target="_blank"><svg
+          <a class=" duration-300 hover:translate-y-[-5px]" href="https://in.linkedin.com/" target="_blank"><svg
               width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M25.3333 4C26.0406 4 26.7189 4.28095 27.219 4.78105C27.719 5.28115 28 5.95942 28 6.66667V25.3333C28 26.0406 27.719 26.7189 27.219 27.219C26.7189 27.719 26.0406 28 25.3333 28H6.66667C5.95942 28 5.28115 27.719 4.78105 27.219C4.28095 26.7189 4 26.0406 4 25.3333V6.66667C4 5.95942 4.28095 5.28115 4.78105 4.78105C5.28115 4.28095 5.95942 4 6.66667 4H25.3333ZM24.6667 24.6667V17.6C24.6667 16.4472 24.2087 15.3416 23.3936 14.5264C22.5784 13.7113 21.4728 13.2533 20.32 13.2533C19.1867 13.2533 17.8667 13.9467 17.2267 14.9867V13.5067H13.5067V24.6667H17.2267V18.0933C17.2267 17.0667 18.0533 16.2267 19.08 16.2267C19.5751 16.2267 20.0499 16.4233 20.3999 16.7734C20.75 17.1235 20.9467 17.5983 20.9467 18.0933V24.6667H24.6667ZM9.17333 11.4133C9.76742 11.4133 10.3372 11.1773 10.7573 10.7573C11.1773 10.3372 11.4133 9.76742 11.4133 9.17333C11.4133 7.93333 10.4133 6.92 9.17333 6.92C8.57571 6.92 8.00257 7.1574 7.57999 7.57999C7.1574 8.00257 6.92 8.57571 6.92 9.17333C6.92 10.4133 7.93333 11.4133 9.17333 11.4133ZM11.0267 24.6667V13.5067H7.33333V24.6667H11.0267Z"
                 fill="#00434F" />
             </svg>
           </a>
-          <a class="duration-300 hover:translate-y-[-30px]" href="https://x.com/" target="_blank"><svg width="32"
+          <a class="duration-300 hover:translate-y-[-5px]" href="https://x.com/" target="_blank"><svg width="32"
               height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <mask id="mask0_248_971" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="4" y="4" width="24"
                 height="24">
@@ -358,7 +358,7 @@
               </g>
             </svg>
           </a>
-          <a class="duration-300 hover:translate-y-[-30px]" href="https://instagram.com/"><svg width="32" height="32"
+          <a class="duration-300 hover:translate-y-[-5px]" href="https://instagram.com/"><svg width="32" height="32"
               viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M17.234 4C18.584 4.0036 19.2691 4.0108 19.8607 4.0276L20.0935 4.036C20.3623 4.0456 20.6275 4.0576 20.9479 4.072C22.2247 4.132 23.0958 4.33359 23.8602 4.62999C24.6522 4.93478 25.3194 5.34757 25.9866 6.01355C26.5968 6.61341 27.0689 7.33903 27.3701 8.1399C27.6665 8.90428 27.8681 9.77546 27.9281 11.0534C27.9425 11.3726 27.9545 11.6378 27.9641 11.9078L27.9713 12.1406C27.9893 12.731 27.9965 13.4162 27.9989 14.7661L28.0001 15.6613V17.2333C28.0031 18.1086 27.9939 18.9838 27.9725 19.8588L27.9653 20.0916C27.9557 20.3616 27.9437 20.6268 27.9293 20.946C27.8693 22.224 27.6653 23.094 27.3701 23.8595C27.0698 24.6608 26.5975 25.3866 25.9866 25.9859C25.3865 26.5959 24.661 27.068 23.8602 27.3695C23.0958 27.6658 22.2247 27.8674 20.9479 27.9274C20.6632 27.9408 20.3784 27.9528 20.0935 27.9634L19.8607 27.9706C19.2691 27.9874 18.584 27.9958 17.234 27.9982L16.3388 27.9994H14.768C13.8924 28.0025 13.0167 27.9933 12.1413 27.9718L11.9085 27.9646C11.6236 27.9538 11.3388 27.9415 11.0541 27.9274C9.77736 27.8674 8.90618 27.6658 8.1406 27.3695C7.33982 27.0687 6.61449 26.5965 6.01545 25.9859C5.40471 25.3862 4.93214 24.6606 4.63068 23.8595C4.33428 23.0952 4.13269 22.224 4.07269 20.946C4.05932 20.6613 4.04732 20.3765 4.03669 20.0916L4.03069 19.8588C4.00858 18.9838 3.99858 18.1086 4.00069 17.2333V14.7661C3.99734 13.8909 4.00614 13.0156 4.02709 12.1406L4.03549 11.9078C4.04509 11.6378 4.05709 11.3726 4.07149 11.0534C4.13149 9.77546 4.33308 8.90549 4.62948 8.1399C4.93081 7.33821 5.40432 6.61237 6.01665 6.01355C6.61554 5.40334 7.34039 4.93116 8.1406 4.62999C8.90618 4.33359 9.77616 4.132 11.0541 4.072C11.3733 4.0576 11.6397 4.0456 11.9085 4.036L12.1413 4.0288C13.0163 4.00748 13.8916 3.99828 14.7668 4.0012L17.234 4ZM16.0004 9.99986C14.4092 9.99986 12.8831 10.632 11.7579 11.7572C10.6327 12.8824 10.0006 14.4085 10.0006 15.9997C10.0006 17.591 10.6327 19.1171 11.7579 20.2423C12.8831 21.3675 14.4092 21.9996 16.0004 21.9996C17.5917 21.9996 19.1178 21.3675 20.243 20.2423C21.3681 19.1171 22.0003 17.591 22.0003 15.9997C22.0003 14.4085 21.3681 12.8824 20.243 11.7572C19.1178 10.632 17.5917 9.99986 16.0004 9.99986ZM16.0004 12.3998C16.4732 12.3997 16.9413 12.4928 17.3781 12.6736C17.8149 12.8544 18.2118 13.1195 18.5461 13.4538C18.8805 13.788 19.1457 14.1848 19.3267 14.6215C19.5077 15.0583 19.6009 15.5264 19.6009 15.9991C19.601 16.4719 19.508 16.94 19.3271 17.3768C19.1463 17.8136 18.8812 18.2105 18.547 18.5448C18.2127 18.8792 17.8159 19.1444 17.3792 19.3254C16.9425 19.5064 16.4744 19.5996 16.0016 19.5996C15.0469 19.5996 14.1312 19.2204 13.4561 18.5452C12.781 17.8701 12.4017 16.9545 12.4017 15.9997C12.4017 15.045 12.781 14.1293 13.4561 13.4542C14.1312 12.7791 15.0469 12.3998 16.0016 12.3998M22.3015 8.1999C21.9037 8.1999 21.5221 8.35793 21.2408 8.63923C20.9595 8.92053 20.8015 9.30205 20.8015 9.69987C20.8015 10.0977 20.9595 10.4792 21.2408 10.7605C21.5221 11.0418 21.9037 11.1998 22.3015 11.1998C22.6993 11.1998 23.0808 11.0418 23.3621 10.7605C23.6434 10.4792 23.8014 10.0977 23.8014 9.69987C23.8014 9.30205 23.6434 8.92053 23.3621 8.63923C23.0808 8.35793 22.6993 8.1999 22.3015 8.1999Z"
