--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             black1: '#111111',
             skyBlue: '#6DC8D9',
             skyBlue1: '#E5F6EC',
+            white1: '#FFF6E2',
+            
           },
 
           backgroundImage: {
@@ -48,7 +50,7 @@
     <div class=" pt-[33px] md:pt-[51px]">
       <div class=" container max-w-[1155px] px-3 mx-auto ">
         <div class=" flex items-center justify-between">
-          <img class="sm:w-[134px] w-[100] h-[42px] sm:h-[55px] cursor-pointer" src="./assets/images/navLogo.png"
+          <img class="sm:w-[134px] w-[100] h-[42px] sm:h-[55px] cursor-pointer" src="./assets/images/png/navLogo.png"
             alt="Navlogo">
           <button
             class="p-[7px_19px_10px_30px] relative overflow-hidden btn hover:bg-white duration-300 w-[200px] h-[44px] z-30 flex items-center justify-end hover:border-2 hover:border-solid hover:border-darkGreen border border-transperent uppercase bg-lightGreen rounded-[30px]  gap-2  relative  ff-phudu">
@@ -85,10 +87,10 @@
             class="w-[127px] max-sm:translate-y-[13px] md:w-[219px] block md:hidden h-[69px] md:h-[118px] rounded-[129px] bg-lightGreen text relative">
             <img
               class="absolute bottom-[0%] left-[11%] text w-[96px] md:w-[155px] lg:w-[164px] h-[123px] md:h-[175px] lg:h-[210px]"
-              src="./assets/images/hero-person.png" alt="headerImgGirl" />
+              src="./assets/images/png/hero-person.png" alt="headerImgGirl" />
           </div>
           <p
-            class="poppins text font-normal text-[18px] leading-[24px] hidden md:block text-grey max-w-[268px] mb-[10px]">
+            class="poppins text font-normal text-[18px] leading-[24px] hidden md:block text-grey max-w-[268px] md:mb-[4px] lg:mb-[-39px]">
             Supercharge your conversion rates and
             <span class="font-semibold text-lightGrey">save up to 34%</span>
             of your sales rep's time, by automating mundane tasks.
@@ -96,9 +98,9 @@
         </div>
         <div class="flex items-end">
           <div
-            class="ff-phudu font-bold text text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] flex items-center gap-3 leading-[73px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
+            class="ff-phudu font-bold mt-61 text text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] flex items-center gap-3 leading-[73px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
             SALES
-            <span><svg class=" w-[53px] sm:w-[71px] lg:h-[127px] md:w-[100px] lg:w-[140px] pt-[15px] sm:pt-[19px]"
+            <span><svg class=" w-[53px] sm:w-[71px] lg:h-[127px] md:w-[87px] lg:w-[140px] pt-[15px] sm:pt-[19px]"
                 width="127" height="119" viewBox="0 0 127 119" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M0 114.113V118.316L23.923 118.316L27.6587 75.0414C28.3052 62.7938 37.5727 51.806 53.3058 53.7889L63.3634 38.7886V118.316L63.7125 118.316H91.4502V114.113L68.0833 0.809339L23.3669 0.641235L0 114.113ZM126.368 0.641235H99.8069V118.316H126.368V0.641235ZM38.3629 70.119C38.3629 73.7116 41.3323 76.6044 45.1159 76.6044C48.7798 76.6044 51.7492 73.7816 51.7492 70.119C51.7492 66.4564 48.8995 63.5403 45.1159 63.5403C41.3323 63.5403 38.3629 66.5264 38.3629 70.119Z"
@@ -106,9 +108,9 @@
               </svg>
             </span>
             <div class=" hidden md:block">
-              <div class=" hidden md:block ps-[43px] pt-24 xl:pt-20 text">
+              <div class=" hidden md:block ps-[43px]  pt-16 lg:pt-24 xl:pt-20 text">
                 <a href="#morebtn"
-                  class="p-[7px_19px_10px_30px] btn  justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkgreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
+                  class="p-[7px_19px_10px_30px] btn  justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkGreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
                   <span class="pe-1"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
@@ -130,13 +132,13 @@
         </div>
         <div class="flex items-end md:pt-4 gap-6 ">
           <div
-            class="w-[219px] hidden md:block h-[118px] rounded-[129px] bg-lightGreen text relative translate-y-[-20px]">
+            class="w-[219px] hidden md:block h-[118px] rounded-[129px] bg-lightGreen text relative translate-y-[-3px] lg:translate-y-[-20px]">
             <img class="absolute bottom-[0%] left-[11%] text w-[155px] lg:w-[164px] h-[175px] lg:h-[210px]"
-              src="./assets/images/hero-person.png" alt="headerImgGirl" />
+              src="./assets/images/png/hero-person.png" alt="headerImgGirl" />
           </div>
 
           <p
-            class="ff-phudu font-bold text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] text leading-[46px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
+            class="ff-phudu font-bold text-[73px] sm:text-[96px] max-md:pb-3 md:text-[110px] lg:text-[170px] text leading-[46px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
             CO-PILOT
           </p>
         </div>
@@ -147,7 +149,7 @@
         </p>
         <div class="md:hidden mt-[32px]">
           <a href="#morebtn"
-            class="p-[7px_19px_10px_30px] btn justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkgreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
+            class="p-[7px_19px_10px_30px] btn justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkGreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
             <span class="pe-1"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
@@ -172,7 +174,7 @@
     <div class="px-3 sm:px-[32px] max-w-[1440px] mx-auto">
       <div class=" grid lg:grid-cols-2 gap-6">
         <div
-          class="bg-skyBlue1 p-[48px_15px] max-lg:p-[48px_24px] max-xl:p-[85px_25px_85px_25px] xl:p-[127px_110px_138px_110px] w-full max-w-[676px] rounded-[32px] sm:h-[400px] lg:h-[561px] mx-auto">
+          class="bg-skyBlue1 p-[48px_15px] max-lg:p-[48px_24px] max-xl:p-[85px_25px_85px_25px] xl:p-[127px_110px_138px_110px]  max-sm:w-[90%] max-lg:w-[66%] lg:w-full max-w-[676px] rounded-[32px] sm:h-[400px] lg:h-[561px] mx-auto">
           <h2
             class="uppercase text-center ff-phudu text-lightGrey text-[28px] lg:text-5xl leading-[28px] lg:leading-5xl font-bold pb-[28px] md:pb-[40px] text2">
             subscribe for more
@@ -213,20 +215,20 @@
             </div>
           </form>
         </div>
-        <div class="bg-greenGradient rounded-[32px] relative w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
+        <div class="bg-greenGradient rounded-[32px] relative max-sm:w-[90%] max-lg:w-[66%] lg:w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
           <div data-tilt>
             <div id="tilt-button"
               class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_28px] xl:p-[39px_59px_46px_56px] bg-skyBlue absolute top-[7%] lg:left-[-8%] left-[-3%] btn1">
               <p
-                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white leading-[38px] lg:leading-[80px] text-white">
+                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white1 leading-[38px] lg:leading-[80px] text-white">
                 Soar quickly</p>
             </div>
           </div>
           <div data-tilt>
             <div id="tilt-button2"
-              class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_26px] xl:p-[40px_44px_45px_44px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10 backdrop-blur-[30px] btn2">
+              class="rounded-[100px] overflow-hidden cursor-pointer max-sm:p-[20px_26px] max-xl:p-[20px_60px] xl:p-[40px_44px_45px_44px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10 backdrop-blur-[30px] btn2">
               <p
-                class="uppercase ff-phudu font-bold max-sm:text-[38px] max-xl:text-[36px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] text-white ">
+                class="uppercase ff-phudu font-bold max-sm:text-[38px] max-xl:text-[36px] xl:text-[80px] text-white1 leading-[48px] lg:leading-[80px] text-white ">
                 with our</p>
             </div>
           </div>
@@ -234,7 +236,7 @@
             <div id="tilt-button3"
               class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_28px] xl:p-[38px_60px_47px_65px] bg-yellow absolute bottom-[7%] left-[5%] btn3">
               <p
-                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white leading-[48px] lg:leading-[80px] flex items-center gap-1">
+                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white1 leading-[48px] lg:leading-[80px] flex items-center gap-1">
                 <span><svg class=" w-[30px] xl:w-[61px] h-[28px] md:h-[56px]" width="61" height="56" viewBox="0 0 61 56"
                     fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -295,7 +297,7 @@
                 stroke="#00434F" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </a>
-          <a class="absolute bottom-[7%] right-[17%] md:right-[11%] icons" href=""><svg
+          <a class="absolute bottom-[7%] max-sm:right-[9%] right-[17%] md:right-[11%] icons" href=""><svg
               class="w-[37px] lg:w-[66px] h-[37px] lg:h-[66px]" viewBox="0 0 81 81" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <rect x="16.1962" width="66" height="66" rx="33" transform="rotate(14.2052 16.1962 0)" fill="#E5F6EC" />
@@ -329,7 +331,7 @@
     <div class="container mx-auto max-w-[1155px] pt-[32px] md:pt-[55px] pb-[40px] md:pb-[54px] px-6">
       <div class=" flex justify-between flex-col lg:flex-row gap-6 lg:gap-0">
         <div class=" flex items-center justify-center lg:justify-start lg:justify-start gap-4 ">
-          <img class=" cursor-pointer" src="./assets/images/footer-logo.png" alt="footer-logo">
+          <img class=" cursor-pointer" src="./assets/images/png/footer-logo.png" alt="footer-logo">
           <p class="poppins font-normal text-sm text-grey max-w-[288px]">Make your sales teams
             superhuman. <span class="lg:block"></span>Chirp. The Sales AI Co-Pilot.</p>
         </div>
@@ -370,11 +372,6 @@
       </div>
     </div>
   </footer>
-  <!-- backtotop section -->
-  <button onclick="scrollToTop()" id="backToTopBtn"
-    class="fixed bottom-4 right-4 bg-gray-800 text-white px-2 py-2 rounded-full shadow-md hidden">
-    Top
-  </button>
   <!-- gsap-link  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
   <!-- tilt-link -->
@@ -446,23 +443,6 @@
     gsap.from(".bg-lightgreen", { scaleX: 0, scaleY: 0, duration: 1.5, ease: "elastic.out(1, 0.75)", delay: 0.2 });
     gsap.from(".bg-lightgreen", { duration: 2, delay: 2, ease: "bounce.in" });
     gsap.from(".bg-skyblue1", { duration: 3, delay: 3, ease: "bounce.in" });
-  </script>
-  <!-- backtotop  -->
-  <script>
-    function scrollToTop() {
-      window.scrollTo({
-        top: 0,
-        behavior: 'smooth'
-      });
-    }
-    window.addEventListener('scroll', function () {
-      var backToTopBtn = document.getElementById('backToTopBtn');
-      if (window.pageYOffset > 100) {
-        backToTopBtn.classList.remove('hidden');
-      } else {
-        backToTopBtn.classList.add('hidden');
-      }
-    });
   </script>
 </body>
 
