--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </label>
 
             <div class="flex flex-col md:flex-row gap-4 lg:gap-0 sm:mt-0 justify-between pt-[40px]">
-              <p class="poppins font-normal text-sm text-grey sm:block hidden max-w-[292px]">Make your sales teams superhuman.Launching soon. Sign up for updates.</p>
+              <p class="poppins font-normal text-sm text-grey sm:block hidden max-w-[292px]">Make your sales teams superhuman<span class="xl:block">.Launching soon. Sign up for updates.</span></p>
               <p class="poppins font-normal text-sm text-grey sm:hidden md:max-w-[184px] text-center">Lorem ipsum
                 dolor sit amet cons. Augue odio sit scelerisque viverra.</p>
               <button id="submitBtn"
