text-size change

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             CO-PILOT
           </p>
         </div>
-        <p class="poppins block md:hidden text font-normal text-[18px] mt-[32px] leading-[24px] text-grey ">
+        <p class="poppins block md:hidden text font-normal text-[16px] sm:text-[18px] mt-[32px] leading-[24px] text-grey ">
           Supercharge your conversion rates and
           <span class="font-semibold text-lightGrey">save up to 34%</span>
           of your sales rep's time, by automating mundane tasks.
