--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             skyBlue: '#6DC8D9',
             skyBlue1: '#E5F6EC',
             white1: '#FFF6E2',
+            white2: '#E8F6F9',
+            white3: '#E5F6EC',
             
           },
 
@@ -76,8 +78,8 @@
         </div>
       </div>
     </div>
-    <div class="flex grow justify-end items-end pb-[80px] md:pb-[120px] ">
-      <div class="container px-3 mx-auto max-w-[1155px]">
+    <div class="flex lg:grow justify-end items-end md:pb-[120px] max-xl:pt-[60px] pb-[80px]">
+      <div class="container md:px-3 px-6 mx-auto max-w-[1155px]">
         <div class="flex items-end gap-10">
           <h1
             class="ff-phudu text font-bold text-[73px] sm:text-[96px] md:text-[110px] lg:text-[170px] leading-[37px] lg:leading-[73px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
@@ -138,7 +140,7 @@
           </div>
 
           <p
-            class="ff-phudu font-bold text-[73px] sm:text-[96px] max-md:pb-3 md:text-[110px] lg:text-[170px] text leading-[46px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
+            class="ff-phudu font-bold text-[73px] sm:text-[96px] max-md:pb-3 md:text-[110px] lg:text-[170px] pb-0 text leading-[46px] sm:leading-[96px] md:leading-[110px] lg:leading-[170px] text-darkGreen">
             CO-PILOT
           </p>
         </div>
@@ -149,7 +151,7 @@
         </p>
         <div class="md:hidden mt-[32px]">
           <a href="#morebtn"
-            class="p-[7px_19px_10px_30px] btn justify-end duration-300 w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkGreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
+            class=" flex p-[7px_19px_10px_30px] btn justify-end duration-300 w-[245px] sm:w-[267px] min-h-[44px] flex items-center overflow-hidden z-30 hover:bg-white hover:border hover:border-darkGreen border border-transperent uppercase bg-yellow rounded-[30px] text-darkgreen gap-3 leading-[20px] relative font-semibold ff-phudu sm:text-[20px] text-[18px] sm:leading-[20px] leading-[10px]">
             <span class="pe-1"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <rect x="24" width="24" height="24" rx="12" transform="rotate(90 24 0)" fill="#00434F" />
@@ -170,11 +172,11 @@
     </div>
   </div>
   <!-- input validation section  -->
-  <section id="morebtn" class="mb-[32px]">
+  <section id="morebtn" class="mb-[32px] ">
     <div class="px-3 sm:px-[32px] max-w-[1440px] mx-auto">
       <div class=" grid lg:grid-cols-2 gap-6">
         <div
-          class="bg-skyBlue1 p-[48px_15px] max-lg:p-[48px_24px] max-xl:p-[85px_25px_85px_25px] xl:p-[127px_110px_138px_110px]  max-sm:w-[90%] max-lg:w-[66%] lg:w-full max-w-[676px] rounded-[32px] sm:h-[400px] lg:h-[561px] mx-auto">
+          class="bg-skyBlue1 p-[48px_15px] max-lg:p-[48px_24px] max-xl:p-[85px_25px_85px_25px] xl:p-[127px_110px_138px_110px]  max-sm:w-[90%] max-lg:w-[66%] lg:w-full max-w-[676px] rounded-[32px] max-lg:h-[440px] xl:h-[561px] mx-auto">
           <h2
             class="uppercase text-center ff-phudu text-lightGrey text-[28px] lg:text-5xl leading-[28px] lg:leading-5xl font-bold pb-[28px] md:pb-[40px] text2">
             subscribe for more
@@ -183,20 +185,20 @@
             <div class="mb-4 md:mb-[20px]">
               <label for="name">
                 <input required type="text" id="name"
-                  class="border border-solid border-lightGreen focus:border-lightGrey placeholder:focus:font-semibold focus:outline-lightGray w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-black placeholder:poppins poppins font-normal placeholder:text-base text-base font-normal"
+                  class="border border-solid border-lightGreen focus:border-lightGrey placeholder:focus:font-semibold focus:outline-lightGray w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey placeholder:poppins poppins font-normal placeholder:text-base text-base font-normal"
                   placeholder="Your Name">
               </label>
             </div>
 
             <label for="email">
               <input required type="email" id="email"
-                class="border border-solid border-lightGreen focus:border-lightGrey focus:outline-lightGray placeholder:focus:font-semibold w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-black placeholder:poppins poppins placeholder:font-normal placeholder:text-base text-base font-normal"
+                class="border border-solid border-lightGreen focus:border-lightGrey focus:outline-lightGray placeholder:focus:font-semibold w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey placeholder:poppins poppins placeholder:font-normal placeholder:text-base text-base font-normal"
                 placeholder="Your Email">
             </label>
 
             <div class="flex flex-col md:flex-row gap-4 lg:gap-0 sm:mt-0 justify-between pt-[40px]">
-              <p class="poppins font-normal text-sm text-grey sm:block hidden max-w-[292px]">Make your sales teams superhuman<span class="xl:block">.Launching soon. Sign up for updates.</span></p>
-              <p class="poppins font-normal text-sm text-grey sm:hidden md:max-w-[184px] text-center">Lorem ipsum
+              <p class="poppins font-normal text-sm text-grey md:block hidden max-w-[292px]">Make your sales teams superhuman<span class="xl:block">.Launching soon. Sign up for updates.</span></p>
+              <p class="poppins font-normal text-sm text-grey md:hidden md:max-w-[184px] max-w-[292px] mx-auto text-center">Lorem ipsum
                 dolor sit amet cons. Augue odio sit scelerisque viverra.</p>
               <button id="submitBtn"
                 class="sm:py-[10px] mt-3 ff-phudu md:mt-0 btn mx-auto sm:mx-0 flex items-center justify-center w-[124px]  h-[40px] py-[2px] sm:px-[32px] px-[17px] z-30 hover:bg-white hover:border hover:border-darkGreen text-darkGreen border-transparent uppercase bg-yellow rounded-[30px] font-semibold ff-phudu relative overflow-hidden sm:text-[20px] text-[16px] sm:leading-[20px] leading-[10px]"
@@ -215,12 +217,12 @@
             </div>
           </form>
         </div>
-        <div class="bg-greenGradient rounded-[32px] relative max-sm:w-[90%] max-lg:w-[66%] lg:w-full h-[315px] lg:h-[561px] max-w-[676px] mx-auto">
+        <div class="bg-greenGradient rounded-[32px] relative max-sm:w-[90%] max-lg:w-[66%] lg:w-full max-md:h-[300px] max-lg:h-[440px] xl:h-[561px] max-w-[676px] mx-auto z-10">
           <div data-tilt>
             <div id="tilt-button"
               class="rounded-[100px] overflow-hidden cursor-pointer p-[20px_28px] xl:p-[39px_59px_46px_56px] bg-skyBlue absolute top-[7%] lg:left-[-8%] left-[-3%] btn1">
               <p
-                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white1 leading-[38px] lg:leading-[80px] text-white">
+                class="uppercase ff-phudu font-bold text-[38px] xl:text-[80px] text-white2 leading-[38px] lg:leading-[80px] text-white">
                 Soar quickly</p>
             </div>
           </div>
@@ -228,7 +230,7 @@
             <div id="tilt-button2"
               class="rounded-[100px] overflow-hidden cursor-pointer max-sm:p-[20px_15px] max-xl:p-[20px_60px] xl:p-[40px_44px_45px_44px] bg-transperantGradient absolute top-[30%] left-[30%] border border-solid border-white z-10 backdrop-blur-[30px] btn2">
               <p
-                class="uppercase ff-phudu font-bold max-sm:text-[38px] max-xl:text-[36px] xl:text-[80px] text-white1 leading-[48px] lg:leading-[80px] text-white ">
+                class="uppercase ff-phudu font-bold max-sm:text-[38px] max-xl:text-[36px] xl:text-[80px] text-white3 leading-[48px] lg:leading-[80px] text-white ">
                 with our</p>
             </div>
           </div>
@@ -309,7 +311,7 @@
                 stroke="#00434F" stroke-width="2.5" stroke-linecap="round" />
             </svg>
           </a>
-          <a class="absolute right-0 bottom-[30%] icons" href=""><svg
+          <a class="absolute right-0 bottom-[30%] icons -z-10" href=""><svg
               class="w-[75px] lg:w-[161px] h-[165px] max-sm:h-[90px]" viewBox="0 0 161 165" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_295_51)">
