--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
             <div class="mb-4 md:mb-[20px]">
               <label for="name">
                 <input required type="text" id="name"
-                  class="border border-solid border-lightGreen focus:border-lightGrey placeholder:focus:font-semibold focus:outline-lightGray w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey placeholder:poppins poppins font-normal placeholder:text-base text-base font-normal"
+                  class="border border-solid border-lightGreen focus:border-lightGrey placeholder:focus:font-semibold focus:outline-lightGray w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey text-grey placeholder:poppins poppins font-normal placeholder:text-base text-base font-normal"
                   placeholder="Your Name">
               </label>
             </div>
 
             <label for="email">
               <input required type="email" id="email"
-                class="border border-solid border-lightGreen focus:border-lightGrey focus:outline-lightGray placeholder:focus:font-semibold w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey placeholder:poppins poppins placeholder:font-normal placeholder:text-base text-base font-normal"
+                class="border border-solid border-lightGreen focus:border-lightGrey focus:outline-lightGray placeholder:focus:font-semibold w-full outline-none rounded-[30px] p-[16px_24px] placeholder:text-grey text-grey placeholder:poppins poppins placeholder:font-normal placeholder:text-base text-base font-normal"
                 placeholder="Your Email">
             </label>
 
